# MilleniumTools

./: .gitignore  CMakeLists.txt  README.md
cmake/: Config.cmake  Macros.cmake
cmake/Modules/: FindEigen3.cmake  FindSFML.cmake
examples/: CMakeLists.txt
examples/parser/: CMakeLists.txt  main.cpp
examples/parser/resources/: train_data.csv  train_label.csv
include/MiT/Parser/: CSV_Parser.hpp  MNIST_Parser.hpp  Parser.hpp
src/MiT/: CMakeLists.txt
src/MiT/Parser/: CMakeLists.txt  CSV_Parser.cpp  MNIST_Parser.cpp  Parser.cpp
